tests/semantic_cases/valid/operators_extended.ob0
MODULE Main;
VAR x: INTEGER;
VAR y: INTEGER;
VAR b1: BOOLEAN;
VAR b2: BOOLEAN;
VAR b3: BOOLEAN;
BEGIN
  x := -1 + (+2) * (7 DIV 3);
  y := 7 MOD 3;
  b3 := ~b1 & b2
END Main.
