tests/semantic_cases/invalid/qualified_type_reference_unsupported.ob0
(* INVALID: qualified type references are not yet resolved across module boundaries *)
MODULE Main;
IMPORT B := ModuleB;
VAR x: B.IntType;
BEGIN
  x := 1
END Main.
